examples/test/testpolicy7580.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7580
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key29: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value4
          key36: value34
          key38: value9
      podSelector:
        matchLabels:
          key21: value7
